# bargin_sort

./: .gitignore  TODO.md
.claude/: settings.local.json
hibid_scraper/: .env.example  .gitignore  README.md  config.py  database.py  main.py  pyproject.toml  query_db.py  scraper.py
